// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal component renders Portal by default when not loading 1`] = `
<section
  className="portal__container"
>
  <div
    className="portal__heading-container"
  >
    <div
      className="portal__message-list-heading"
    >
      <h2
        className="portal__title"
      />
      <p
        className="portal__expiry-datetime"
      >
        Expires on
         
        Invalid Date
      </p>
    </div>
    <button
      className="portal__close-session"
      onClick={[Function]}
    >
      Exit Huddle
    </button>
  </div>
  <p
    className="portal__empty-messages"
  >
    No messages found.
  </p>
  <MessageForm
    portal_id=""
  />
</section>
`;

exports[`Portal component renders Portal in loading state by default 1`] = `
<h2
  className="portal__loading-heading"
>
  Loading...
</h2>
`;

exports[`Portal component renders with portal and messages props provided 1`] = `
<section
  className="portal__container"
>
  <div
    className="portal__heading-container"
  >
    <div
      className="portal__message-list-heading"
    >
      <h2
        className="portal__title"
      >
        Test Portal Name
      </h2>
      <p
        className="portal__expiry-datetime"
      >
        Expires on
         
        10/24/2019, 12:09:09 PM
      </p>
    </div>
    <button
      className="portal__close-session"
      onClick={[Function]}
    >
      Exit Huddle
    </button>
  </div>
  <ul
    className="portal__message-list"
    tabIndex="0"
  >
    <Message
      author="Tim"
      content="Hi this is a test"
      create_timestamp="10/23/2019, 12:09:11 PM"
      key="1"
    />
    <Message
      author="Tim"
      content="Hi this is a test"
      create_timestamp="10/23/2019, 12:09:12 PM"
      key="2"
    />
    <Message
      author="Tim"
      content="Hi this is a test"
      create_timestamp="10/23/2019, 12:09:13 PM"
      key="3"
    />
    <li
      style={
        Object {
          "clear": "both",
          "float": "left",
        }
      }
    />
  </ul>
  <MessageForm
    portal_id="a7580f03-d358-4f3f-a5f8-6b69ba02d83a"
  />
</section>
`;
